--- a/ColorSisters/Base.lproj/Main.storyboard
+++ b/ColorSisters/Base.lproj/Main.storyboard
@@ -308,7 +308,7 @@
         <!--Detail-->
         <scene sceneID="YvJ-Hs-aQT">
             <objects>
-                <viewController title="Detail" id="PMS-v5-5GH" customClass="KokkoDetailedMatchViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PageContentViewController2" title="Detail" id="PMS-v5-5GH" customClass="KokkoDetailedMatchViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ep9-ak-bbE"/>
                         <viewControllerLayoutGuide type="bottom" id="QHT-bE-ghn"/>
@@ -323,9 +323,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="-11" y="435" width="422" height="29"/>
+                                </variation>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gqz-QU-8xV">
-                                <rect key="frame" x="0.0" y="64" width="600" height="363"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="416"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="16" y="64" width="359" height="363"/>
+                                </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -379,13 +385,13 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="detailDescriptionLabel" destination="Oha-Tk-11I" id="KRh-yH-RVA"/>
-                        <outlet property="detailImage" destination="gqz-QU-8xV" id="dWt-5S-5rk"/>
+                        <outlet property="backgroundImageView" destination="gqz-QU-8xV" id="DdT-C9-zLm"/>
+                        <outlet property="titleLabel" destination="Oha-Tk-11I" id="fCQ-Lt-RqQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7i2-BW-5qK" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-450" y="-105"/>
+            <point key="canvasLocation" x="-1884" y="1283"/>
         </scene>
         <!--Share Results-->
         <scene sceneID="FD7-sd-zhD">
@@ -482,10 +488,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vYd-Tk-d36" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301.5" y="-89.25"/>
+            <point key="canvasLocation" x="127.5" y="-122"/>
+        </scene>
+        <!--Detail Page View Controller-->
+        <scene sceneID="GTh-AX-nYX">
+            <objects>
+                <pageViewController storyboardIdentifier="DetailPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Oal-MJ-bA5" userLabel="Detail Page View Controller" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jnd-dQ-VV3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-987" y="1523"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="crU-7E-2zZ">
+            <objects>
+                <viewController storyboardIdentifier="ViewController" id="feD-ka-hzG" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Vyp-xA-Dv7"/>
+                        <viewControllerLayoutGuide type="bottom" id="K36-Yd-oKw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rvr-C6-mfb">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W6G-7q-6Wf" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-263" y="1502"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tIG-6A-s85"/>
+        <segue reference="Bnm-5c-lN4"/>
     </inferredMetricsTieBreakers>
 </document>
