--- a/app/views/devise/registrations/show.html.slim
+++ b/app/views/devise/registrations/show.html.slim
@@ -4,10 +4,10 @@ h3.row.columns.large-12
 br
 .row.columns.large-12
   table.show#users
-    - User.show_attributes.each do |key|
+    - @profile_form.displayable_attribute_keys.each do |key|
       tr
         td#user_label = key.to_s.humanize
-        td#user_data = resource.send(key)
+        td#user_data = @profile_form.send(key)
   .row
     .columns.large-2.medium-3.small-6
       = button_to "Back", build_cancel_path, method: :get, class: 'button cbutton'
