--- a/ColorSisters/Base.lproj/Main.storyboard
+++ b/ColorSisters/Base.lproj/Main.storyboard
@@ -305,96 +305,6 @@
             </objects>
             <point key="canvasLocation" x="-1764" y="-863"/>
         </scene>
-        <!--Detail-->
-        <scene sceneID="YvJ-Hs-aQT">
-            <objects>
-                <viewController storyboardIdentifier="KokkoDetailPageContentViewController" title="Detail" id="PMS-v5-5GH" customClass="KokkoDetailPageContentViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ep9-ak-bbE"/>
-                        <viewControllerLayoutGuide type="bottom" id="QHT-bE-ghn"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="G6S-OL-dTI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Match Details" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Oha-Tk-11I">
-                                <rect key="frame" x="20" y="469" width="560" height="87"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="-11" y="435" width="422" height="29"/>
-                                </variation>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gqz-QU-8xV">
-                                <rect key="frame" x="0.0" y="64" width="600" height="416"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="64" width="359" height="363"/>
-                                </variation>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="QHT-bE-ghn" firstAttribute="top" secondItem="Oha-Tk-11I" secondAttribute="bottom" constant="87" id="6MQ-ws-BYJ"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="centerX" secondItem="gqz-QU-8xV" secondAttribute="centerX" id="7wW-sW-eYR"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="centerX" secondItem="G6S-OL-dTI" secondAttribute="centerX" id="A0A-os-80y"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="centerX" secondItem="gqz-QU-8xV" secondAttribute="centerX" id="E1g-7n-j8A"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="bottom" secondItem="QHT-bE-ghn" secondAttribute="top" id="ENT-Yc-WGq"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="centerX" secondItem="G6S-OL-dTI" secondAttribute="centerX" id="GVZ-S5-g35"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="top" secondItem="gqz-QU-8xV" secondAttribute="bottom" constant="84" id="Q2H-xN-A3l"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="leading" secondItem="G6S-OL-dTI" secondAttribute="leadingMargin" constant="4" id="R6V-lv-6tw"/>
-                            <constraint firstItem="gqz-QU-8xV" firstAttribute="top" secondItem="ep9-ak-bbE" secondAttribute="bottom" id="StW-yu-nWQ"/>
-                            <constraint firstItem="gqz-QU-8xV" firstAttribute="leading" secondItem="G6S-OL-dTI" secondAttribute="leading" id="Vqx-4R-bAe"/>
-                            <constraint firstItem="QHT-bE-ghn" firstAttribute="top" secondItem="gqz-QU-8xV" secondAttribute="bottom" constant="76" id="YK4-5s-K1H"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="top" secondItem="ep9-ak-bbE" secondAttribute="bottom" constant="405" id="bJr-el-JA0"/>
-                            <constraint firstItem="gqz-QU-8xV" firstAttribute="top" secondItem="ep9-ak-bbE" secondAttribute="bottom" id="ehg-y6-XMo"/>
-                            <constraint firstItem="gqz-QU-8xV" firstAttribute="leading" secondItem="G6S-OL-dTI" secondAttribute="leading" id="oTH-9h-K92"/>
-                            <constraint firstItem="Oha-Tk-11I" firstAttribute="leading" secondItem="G6S-OL-dTI" secondAttribute="leadingMargin" constant="4" id="uG6-33-kKy"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="ehg-y6-XMo"/>
-                                <exclude reference="oTH-9h-K92"/>
-                                <exclude reference="E1g-7n-j8A"/>
-                                <exclude reference="GVZ-S5-g35"/>
-                                <exclude reference="Q2H-xN-A3l"/>
-                                <exclude reference="uG6-33-kKy"/>
-                                <exclude reference="6MQ-ws-BYJ"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="ehg-y6-XMo"/>
-                                <include reference="oTH-9h-K92"/>
-                                <include reference="E1g-7n-j8A"/>
-                                <include reference="GVZ-S5-g35"/>
-                                <include reference="Q2H-xN-A3l"/>
-                                <include reference="uG6-33-kKy"/>
-                                <include reference="6MQ-ws-BYJ"/>
-                            </mask>
-                        </variation>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Match Details" id="6Ty-Eh-Foq">
-                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="9IM-xR-tC5">
-                            <connections>
-                                <segue destination="KGb-kh-VSH" kind="show" id="Bnm-5c-lN4"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="backgroundImageView" destination="gqz-QU-8xV" id="DdT-C9-zLm"/>
-                        <outlet property="titleLabel" destination="Oha-Tk-11I" id="fCQ-Lt-RqQ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7i2-BW-5qK" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-192" y="635"/>
-        </scene>
         <!--Share Results-->
         <scene sceneID="FD7-sd-zhD">
             <objects>
@@ -492,14 +402,6 @@
             </objects>
             <point key="canvasLocation" x="-1754" y="1392"/>
         </scene>
-        <!--Detail Page View Controller-->
-        <scene sceneID="GTh-AX-nYX">
-            <objects>
-                <pageViewController storyboardIdentifier="DetailPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Oal-MJ-bA5" userLabel="Detail Page View Controller" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jnd-dQ-VV3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="557" y="635"/>
-        </scene>
         <!--Kokko Detail Page Control View Controller-->
         <scene sceneID="Wtn-r6-jHm">
             <objects>
@@ -513,6 +415,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Bnm-5c-lN4"/>
+        <segue reference="tIG-6A-s85"/>
     </inferredMetricsTieBreakers>
 </document>
